# SoaresModules

./: .gitignore  pyproject.toml
SoaresModules/: pyproject.toml
SoaresModules/src/soaresmodules/: __init__.py  soares_utils.py
src/soaresmodules/: soares_utils.py
