[project]
name = "soaresmodules"
version = "0.1.0"
description = "This package contains useful functions that I need in several projects"
authors = [
    {name = "CapitalAlive",email = "120092274+CapitalAlive@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
